# py-doc-printer

./: .buildinfo  .gitignore  .pre-commit-config.yaml  MANIFEST.in  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: build-doc.yml  build.yml  ci.yml
_sources/: index.rst.txt
doc-source/: conf.py  index.rst
doc_printer/: __init__.py  abc.py  doc.py  simple.py  smart.py  table.py
docs/: conf.py  index.rst
pretty_printer/: abc.py  smart.py  table.py
prettyprinter/: __init__.py  abc.py  doc.py  simple.py  table.py  typing.py
prettyprinter/render/: __init__.py  abc.py  simple.py  smart.py  table.py
src/doc_printer/: __init__.py  _compat_itertools.py  _compat_strpattern.py  abc.py  doc.py  simple.py  smart.py  table.py
src/doc_printer/doc_renderer/: abc.py  simple.py  smart.py  table.py
test/: test_doc.py  test_doc_printer.py  test_simple.py
tests/: test_doc.py  test_golden.py  test_simple.py  test_smart.py
tests/data/golden/simple/default/: blank_line_in_header.yml  knausj_talon_apps_1password_1password.yml  knausj_talon_apps_1password_1password_global.yml  knausj_talon_apps_adobe_adobe_acrobat_reader_dc.yml  knausj_talon_apps_amethyst_amethyst.yml  knausj_talon_apps_anaconda_anaconda.yml  knausj_talon_apps_calibre_calibre_viewer.yml  knausj_talon_apps_conemu.yml  knausj_talon_apps_discord_discord.yml  knausj_talon_apps_eclipse_eclipse.yml  knausj_talon_apps_evernote_mac.yml  knausj_talon_apps_file_manager.yml  knausj_talon_apps_firefox_firefox.yml  knausj_talon_apps_gdb_gdb.yml  knausj_talon_apps_generic_browser.yml  knausj_talon_apps_generic_debugger.yml  knausj_talon_apps_generic_snippets_generic_snippets.yml  knausj_talon_apps_generic_snippets_generic_snippets_open.yml  knausj_talon_apps_generic_terminal_generic_terminal.yml  knausj_talon_apps_i3wm_i3wm.yml  knausj_talon_apps_jetbrains_jetbrains.yml  knausj_talon_apps_kindle_kindle.yml  knausj_talon_apps_kubectl_kubectl.yml  knausj_talon_apps_okular_okular.yml  knausj_talon_apps_platforms_linux_atril_atril.yml  knausj_talon_apps_platforms_linux_dunst.yml  knausj_talon_apps_platforms_linux_evince_evince.yml  knausj_talon_apps_platforms_linux_gnome-terminal_gnome-terminal.yml  knausj_talon_apps_platforms_linux_kde-konsole_kde-konsole.yml  knausj_talon_apps_platforms_linux_keepassx.yml  knausj_talon_apps_platforms_linux_nautilus_nautilus.yml  knausj_talon_apps_platforms_linux_signal.yml  knausj_talon_apps_platforms_linux_taskwarrior.yml  knausj_talon_apps_platforms_linux_termite.yml  knausj_talon_apps_platforms_linux_tmux.yml  knausj_talon_apps_platforms_mac_finder_finder.yml  knausj_talon_apps_platforms_mac_iterm_iterm.yml  knausj_talon_apps_platforms_mac_notes_notes.yml  knausj_talon_apps_platforms_mac_rstudio.yml  knausj_talon_apps_platforms_mac_terminal_apple_terminal.yml  (+126 more)
tests/data/golden/smart1k/default/: knausj_talon_apps_1password_1password.yml  knausj_talon_apps_1password_1password_global.yml  knausj_talon_apps_adobe_adobe_acrobat_reader_dc.yml  knausj_talon_apps_amethyst_amethyst.yml  knausj_talon_apps_anaconda_anaconda.yml  knausj_talon_apps_calibre_calibre_viewer.yml  knausj_talon_apps_conemu.yml  knausj_talon_apps_discord_discord.yml  knausj_talon_apps_eclipse_eclipse.yml  knausj_talon_apps_file_manager.yml  knausj_talon_apps_firefox_firefox.yml  knausj_talon_apps_gdb_gdb.yml  knausj_talon_apps_generic_browser.yml  knausj_talon_apps_generic_debugger.yml  knausj_talon_apps_generic_snippets_generic_snippets.yml  knausj_talon_apps_generic_terminal_generic_terminal.yml  knausj_talon_apps_i3wm_i3wm.yml  knausj_talon_apps_jetbrains_jetbrains.yml  knausj_talon_apps_kindle_kindle.yml  knausj_talon_apps_kubectl_kubectl.yml  knausj_talon_apps_platforms_linux_dunst.yml  knausj_talon_apps_platforms_linux_gnome-terminal_gnome-terminal.yml  knausj_talon_apps_platforms_linux_keepassx.yml  knausj_talon_apps_platforms_linux_signal.yml  knausj_talon_apps_platforms_linux_taskwarrior.yml  knausj_talon_apps_platforms_linux_termite.yml  knausj_talon_apps_platforms_mac_finder_finder.yml  knausj_talon_apps_platforms_mac_notes_notes.yml  knausj_talon_apps_platforms_mac_rstudio.yml  knausj_talon_apps_platforms_mac_terminal_apple_terminal.yml  knausj_talon_apps_platforms_win_explorer_explorer.yml  knausj_talon_apps_platforms_win_nitro_reader_nitro_reader_5.yml  knausj_talon_apps_platforms_win_outlook_outlook.yml  knausj_talon_apps_platforms_win_powershell_power_shell.yml  knausj_talon_apps_platforms_win_sumatrapdf_sumatrapdf.yml  knausj_talon_apps_platforms_win_windows_terminal_windows_terminal.yml  knausj_talon_apps_platforms_win_wsl_wsl.yml  knausj_talon_apps_slack_slack_mac.yml  knausj_talon_apps_slack_slack_win.yml  knausj_talon_apps_talon_repl.yml  (+105 more)
tests/data/golden/smart80/default/: knausj_talon_apps_1password_1password.yml  knausj_talon_apps_1password_1password_global.yml  knausj_talon_apps_adobe_adobe_acrobat_reader_dc.yml  knausj_talon_apps_amethyst_amethyst.yml  knausj_talon_apps_anaconda_anaconda.yml  knausj_talon_apps_conemu.yml  knausj_talon_apps_discord_discord.yml  knausj_talon_apps_eclipse_eclipse.yml  knausj_talon_apps_evernote_mac.yml  knausj_talon_apps_file_manager.yml  knausj_talon_apps_firefox_firefox.yml  knausj_talon_apps_gdb_gdb.yml  knausj_talon_apps_generic_browser.yml  knausj_talon_apps_generic_debugger.yml  knausj_talon_apps_generic_snippets_generic_snippets.yml  knausj_talon_apps_generic_snippets_generic_snippets_open.yml  knausj_talon_apps_generic_terminal_generic_terminal.yml  knausj_talon_apps_i3wm_i3wm.yml  knausj_talon_apps_jetbrains_jetbrains.yml  knausj_talon_apps_kindle_kindle.yml  knausj_talon_apps_kubectl_kubectl.yml  knausj_talon_apps_okular_okular.yml  knausj_talon_apps_platforms_linux_atril_atril.yml  knausj_talon_apps_platforms_linux_dunst.yml  knausj_talon_apps_platforms_linux_evince_evince.yml  knausj_talon_apps_platforms_linux_gnome-terminal_gnome-terminal.yml  knausj_talon_apps_platforms_linux_keepassx.yml  (+127 more)
(+961 files in other folders)
