[build-system]
requires = ["setuptools", "poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "doc_printer"
version = "0.14.0"
description = "A Wadler-Leijen Pretty Printer in Python."
license = "MIT"
authors = ["Wen Kokke <wenkokke@users.noreply.github.com>"]
readme = "README.md"
keywords = ["pretty-printer"]
documentation = "https://wenkokke.github.io/py-doc-printer/"
repository = "https://github.com/wenkokke/py-doc-printer"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
]

[tool.poetry.dependencies]
python = "^3.9"
dataclasses_json = "^0.5.7"
more_itertools = "^9.1.0"
bumpver = { version = "*", optional = true }
pytest = { version = "^7.2.2", optional = true }
pytest-benchmark = { version = "^4.0.0", optional = true }
pytest-golden = { version = "^0.2.2", optional = true }
Sphinx = { version = "^6.1.3", optional = true }
sphinx-bootstrap-theme = { version = "^0.8.1", optional = true }
# Prevent Poetry 1.3 from removing setuptools
setuptools = "*"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-bootstrap-theme"]
test = ["bumpver", "pytest", "pytest-benchmark", "pytest-golden"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
tox = ">=4.4.6,<5.0.0"
black = "^22.8.0"
isort = "^5.10.1"
bumpver = "*"

[tool.pytest.ini_options]
enable_assertion_pass_hook = true
filterwarnings = ["ignore::DeprecationWarning:.*:"]
addopts = "--ignore=tests/data"
testpaths = ["tests"]

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true

[tool.bumpver]
current_version = "0.14.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"docs/conf.py" = ['release = "{version}"']

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py39, py310, py311
isolated_build = true
skip_missing_interpreters = true

[testenv]
skip_install = true
deps =
  poetry==1.4.0
commands_pre =
  poetry install -E test
commands =
  poetry run bumpver update --patch --dry --no-fetch
  poetry run pytest -x -k 'not failing' --benchmark-disable tests/
"""
